--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,6 @@
             android:layout_height="match_parent"
             >
 
-
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -69,7 +67,9 @@
                             android:src="@drawable/coffee"
                             android:background="#00000000"
                             android:layout_marginRight="16dp"
-                            android:layout_marginLeft="16dp">
+                            android:layout_marginLeft="16dp"
+                            android:onClick="bar"
+                            android:foreground="?attr/selectableItemBackgroundBorderless">
 
                         </ImageButton>
 
@@ -100,7 +100,8 @@
                             android:src="@drawable/restaurant"
                             android:background="#00000000"
                             android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp" />
+                            android:layout_marginRight="16dp"
+                            android:foreground="?attr/selectableItemBackgroundBorderless"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -129,7 +130,8 @@
                             android:src="@drawable/smiley"
                             android:background="#00000000"
                             android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp" />
+                            android:layout_marginRight="16dp"
+                            android:foreground="?attr/selectableItemBackgroundBorderless"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -158,7 +160,8 @@
                             android:src="@drawable/star"
                             android:background="#00000000"
                             android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp" />
+                            android:layout_marginRight="16dp"
+                            android:foreground="?attr/selectableItemBackgroundBorderless"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -187,7 +190,8 @@
                             android:src="@drawable/moneycash"
                             android:background="#00000000"
                             android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp" />
+                            android:layout_marginRight="16dp"
+                            android:foreground="?attr/selectableItemBackgroundBorderless"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -216,7 +220,8 @@
                             android:src="@drawable/questionmark"
                             android:background="#00000000"
                             android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp" />
+                            android:layout_marginRight="16dp"
+                            android:foreground="?attr/selectableItemBackgroundBorderless"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -239,7 +244,8 @@
                 app:backgroundTint="@color/colorAccent"
                 app:layout_anchor="@id/adPanel"
                 app:layout_anchorGravity="bottom|right|end"
-                android:src="@drawable/ic_shopping_cart_white_32dp">
+                android:src="@drawable/ic_shopping_cart_white_32dp"
+                android:visibility="invisible">
             </android.support.design.widget.FloatingActionButton>
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
