--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/menu_thumbnail"
+        android:id="@+id/bar_item_thumbnail"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/coffeethumbnail"
@@ -19,9 +19,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Kafe"
-        android:id="@+id/menu_item_name"
+        android:id="@+id/bar_item_name"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/menu_thumbnail"
+        android:layout_toEndOf="@+id/bar_item_thumbnail"
         android:textSize="16sp"
         android:textColor="@color/primaryTextColor"
         />
@@ -31,10 +31,10 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="60"
-        android:id="@+id/menu_item_price"
+        android:id="@+id/bar_item_price"
         android:textSize="16sp"
         android:textColor="@color/primaryTextColor"
-        android:layout_alignTop="@+id/menu_item_name"
+        android:layout_alignTop="@+id/bar_item_name"
         android:layout_toStartOf="@+id/textView9"
         android:layout_marginRight="5dp" />
 
@@ -46,17 +46,42 @@
         android:id="@+id/textView9"
         android:textSize="16sp"
         android:textColor="@color/primaryTextColor"
-        android:layout_alignTop="@+id/menu_item_price"
-        android:layout_toStartOf="@+id/menu_add_button" />
+        android:layout_alignTop="@+id/bar_item_price"
+        android:layout_toStartOf="@+id/frameLayout" />
 
-    <ImageButton
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:id="@+id/menu_add_button"
-        android:src="@drawable/ic_add_shopping_cart_black_24dp"
-        android:background="#00000000"
-        android:layout_alignTop="@+id/textView9"
+    <FrameLayout
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="16dp"
+        android:layout_centerVertical="true"
+        android:id="@+id/frameLayout">
+
+        <ImageButton
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/bar_add_button"
+            android:src="@drawable/ic_add_shopping_cart_black_24dp"
+            android:background="#00000000"
+            android:layout_alignStart="@+id/frameLayout" />
+
+        <TextView
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/orange_circle"
+            android:layout_gravity="center_horizontal|right"
+            android:text="88"
+            android:textSize="8sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textColor="#fff"
+            android:id="@+id/bar_item_quantity"
+            android:visibility="gone"
+            />
+
+    </FrameLayout>
+
 </RelativeLayout>
