--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#00BBD3</color>
     <color name="colorPrimaryDark">#0096A6</color>
+    <color name="colorPrimaryLight">#B1EAF1</color>
     <color name="colorAccent">#fe5621</color>
     <color name="primaryTextColor">#212121</color>
     <color name="secondaryTextColor">#757575</color>
