--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -47,7 +47,7 @@
         android:textSize="16sp"
         android:textColor="@color/primaryTextColor"
         android:layout_alignTop="@+id/bar_item_price"
-        android:layout_toStartOf="@+id/frameLayout" />
+        android:layout_toStartOf="@+id/bar_item_add" />
 
     <FrameLayout
         android:layout_width="35dp"
@@ -56,16 +56,17 @@
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
         android:layout_centerVertical="true"
-        android:id="@+id/frameLayout">
+        android:id="@+id/bar_item_add"
+        android:clickable="true">
 
-        <ImageButton
+        <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="center_vertical"
             android:id="@+id/bar_add_button"
             android:src="@drawable/ic_add_shopping_cart_black_24dp"
             android:background="#00000000"
-            android:layout_alignStart="@+id/frameLayout" />
+            android:layout_alignStart="@+id/bar_item_add" />
 
         <TextView
             android:layout_width="12dp"
