--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,15 +93,16 @@
                         android:orientation="vertical">
 
                         <ImageButton
+                            android:id="@+id/imageButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:adjustViewBounds="true"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/restaurant"
-                            android:background="#00000000"
                             android:layout_marginLeft="16dp"
                             android:layout_marginRight="16dp"
-                            android:foreground="?attr/selectableItemBackgroundBorderless"/>
+                            android:adjustViewBounds="true"
+                            android:background="#00000000"
+                            android:foreground="?attr/selectableItemBackgroundBorderless"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/restaurant" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -124,15 +125,16 @@
                         android:orientation="vertical">
 
                         <ImageButton
+                            android:id="@+id/imageButton2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:adjustViewBounds="true"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/smiley"
-                            android:background="#00000000"
                             android:layout_marginLeft="16dp"
                             android:layout_marginRight="16dp"
-                            android:foreground="?attr/selectableItemBackgroundBorderless"/>
+                            android:adjustViewBounds="true"
+                            android:background="#00000000"
+                            android:foreground="?attr/selectableItemBackgroundBorderless"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/smiley" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -156,13 +158,14 @@
                         <ImageButton
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:adjustViewBounds="true"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/star"
-                            android:background="#00000000"
                             android:layout_marginLeft="16dp"
                             android:layout_marginRight="16dp"
-                            android:foreground="?attr/selectableItemBackgroundBorderless"/>
+                            android:adjustViewBounds="true"
+                            android:background="#00000000"
+                            android:foreground="?attr/selectableItemBackgroundBorderless"
+                            android:onClick="ratings"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/star" />
 
                         <TextView
                             android:layout_width="wrap_content"
