--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -16,34 +16,47 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="25"
+        android:layout_weight="22.65"
+        android:background="@color/colorPrimaryLight"
         android:orientation="vertical"
-        android:background="@color/colorPrimaryLight">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Si e vleresoni sherbimin?"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="16dp"
-            android:textColor="@color/primaryTextColor"
-            android:textSize="17dp"
-            />
+        android:weightSum="1">
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lezetshem"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="10dp"
+            android:text="Si e vleresoni sherbimin?"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="17dp" />
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@style/CustomRating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+
+            android:layout_weight="0.25"
+
+            android:isIndicator="false" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+
+            android:text="Lezetshem"
             android:textColor="@color/secondaryTextColor"
-            android:textSize="15dp"
-            />
+            android:textSize="15dp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginBottom="30dp"
 
             >
 
@@ -52,7 +65,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                >
+
 
                 <ImageView
                     android:layout_width="9dp"
@@ -79,13 +95,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_marginBottom="16dp"
+                android:layout_marginRight="16dp"
                 android:text="Publiko"
                 android:textColor="@color/primaryTextColor" />
 
         </RelativeLayout>
 
     </LinearLayout>
-
 
 
     <RelativeLayout
@@ -99,34 +116,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4.5"
-            android:layout_centerInParent="true"
             android:textColor="@color/primaryTextColor"
-            android:textSize="40sp" />
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_toEndOf="@+id/rating"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/textView6"
-            android:src="@drawable/ic_grade_black_24dp" />
-
-
+            android:textSize="40sp"
+            android:layout_marginLeft="16dp"
+            />
 
 
     </RelativeLayout>
 
     <ListView
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
+        android:id="@+id/rating_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_weight="75"
+        tools:listitem="@layout/rating_item"
 
-        
+
+
 
         />
 
