--- a/app/src/main/res/layout/activity_bar.xml
+++ b/app/src/main/res/layout/activity_bar.xml
@@ -40,6 +40,7 @@
         app:backgroundTint="@color/colorAccent"
         app:layout_anchorGravity="bottom|right|end"
         android:foreground="?attr/selectableItemBackgroundBorderless"
-        android:onClick="openCart">
+        android:onClick="openCart"
+        android:visibility="gone">
     </android.support.design.widget.FloatingActionButton>
 </RelativeLayout>
