--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -45,43 +45,44 @@
         android:text="LEK"
         android:id="@+id/textView9"
         android:textSize="16sp"
+        android:layout_marginRight="16dp"
         android:textColor="@color/primaryTextColor"
         android:layout_alignTop="@+id/bar_item_price"
-        android:layout_toStartOf="@+id/bar_item_add" />
+        android:layout_alignParentRight="true" />
 
     <FrameLayout
+        android:id="@+id/bar_item_add"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_centerVertical="true"
-        android:id="@+id/bar_item_add"
-        android:clickable="true">
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:clickable="true"
+        android:visibility="gone">
 
         <ImageView
+            android:id="@+id/bar_add_button"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_alignStart="@+id/bar_item_add"
             android:layout_gravity="center_vertical"
-            android:id="@+id/bar_add_button"
-            android:src="@drawable/ic_add_shopping_cart_black_24dp"
             android:background="#00000000"
-            android:layout_alignStart="@+id/bar_item_add" />
+            android:src="@drawable/ic_add_shopping_cart_black_24dp" />
 
         <TextView
+            android:id="@+id/bar_item_quantity"
             android:layout_width="12dp"
             android:layout_height="12dp"
+            android:layout_gravity="center_horizontal|right"
             android:layout_marginRight="5dp"
             android:background="@drawable/orange_circle"
-            android:layout_gravity="center_horizontal|right"
+            android:gravity="center"
             android:text="88"
+            android:textColor="#fff"
             android:textSize="8sp"
             android:textStyle="bold"
-            android:gravity="center"
-            android:textColor="#fff"
-            android:id="@+id/bar_item_quantity"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
 
     </FrameLayout>
 
