--- a/app/src/main/res/drawable/orangesquare.xml
+++ b/app/src/main/res/drawable/orangesquare.xml
@@ -3,22 +3,22 @@
 
     <item android:state_pressed="false">
         <shape>
-            <corners android:radius="8dp"></corners>
-            <solid android:color="#ae0000"></solid>
+            <corners android:radius="2dp"></corners>
+            <solid android:color="@color/colorAccent"></solid>
         </shape>
     </item>
 
     <item android:state_focused="true">
         <shape>
-            <corners android:radius="8dp"></corners>
-            <solid android:color="#bd1111"></solid>
+            <corners android:radius="2dp"></corners>
+            <solid android:color="@color/colorAccentLight"></solid>
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape>
-            <corners android:radius="8dp"></corners>
-            <solid android:color="#bd1111"></solid>
+            <corners android:radius="2dp"></corners>
+            <solid android:color="@color/colorAccentLight"></solid>
         </shape>
     </item>
 
