--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="95"
+            android:layout_weight="94"
             >
 
             <LinearLayout
@@ -137,7 +137,8 @@
                             android:background="#00000000"
                             android:foreground="?attr/selectableItemBackgroundBorderless"
                             android:scaleType="fitCenter"
-                            android:src="@drawable/coupon" />
+                            android:src="@drawable/coupon"
+                            android:onClick="points"/>
 
                         <TextView
                             android:id="@+id/textView6"
@@ -264,7 +265,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="5"
+            android:layout_weight="6"
             android:background="@color/colorPrimary"
             android:textColor="#ffffff"
             android:textSize="20sp"
