--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -13,105 +13,33 @@
         layout="@layout/toolbar"
         ></include>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/rating_viewpager"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="22.65"
+        android:layout_weight="30"
         android:background="@color/colorPrimaryLight"
-        android:orientation="vertical"
-        android:weightSum="1">
+        >
+
 
         <LinearLayout
             android:id="@+id/SliderDots"
             android:orientation="horizontal"
             android:gravity="center_vertical|center_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></LinearLayout>
-
-
-        <TextView
-            android:id="@+id/vleresimisherbimit"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="bottom"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="10dp"
-            android:text="Si e vleresoni sherbimin?"
-            android:textColor="@color/primaryTextColor"
-            android:textSize="17dp" />
+            ></LinearLayout>
 
-
-        <RatingBar
-            android:id="@+id/ratingBar"
-            style="@style/CustomRating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-
-            android:layout_weight="0.25"
-
-            android:isIndicator="false" />
-
-
-        <TextView
-            android:id="@+id/lezetshem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Lezetshem"
-            android:textColor="@color/secondaryTextColor"
-            android:textSize="15dp" />
-
-        <RelativeLayout
+        <android.support.v4.view.ViewPager
+            android:id="@+id/rating_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-
-            >
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
-
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="9dp"
-                    android:layout_height="9dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/pik" />
-
-                <ImageView
-                    android:layout_width="7dp"
-                    android:layout_height="7dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/pikjoaktive" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="16dp"
-                android:layout_marginRight="16dp"
-                android:clickable="true"
-                android:text="Publiko"
-                android:textColor="@color/primaryTextColor" />
-
-
-        </RelativeLayout>
-
-
-    </android.support.v4.view.ViewPager>
-
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1"
+            android:layout_marginBottom="10dp">
+        </android.support.v4.view.ViewPager>
+    </FrameLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -139,7 +67,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_weight="75"
+        android:layout_weight="70"
         tools:listitem="@layout/rating_item"
 
 
