--- a/app/src/main/res/layout/activity_coupon.xml
+++ b/app/src/main/res/layout/activity_coupon.xml
@@ -52,7 +52,7 @@
         android:layout_centerHorizontal="true"
         android:textSize="40sp"
         android:layout_below="@+id/full_coupon_thumbnail"
-        android:textColor="@color/primaryTextColor"
+        android:textColor="#fff"
         android:text="Kupon 500 LEK"
         android:textStyle="bold" />
 
@@ -61,11 +61,11 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_margin="16dp"
-        android:background="@drawable/blue_circle"
+        android:background="@drawable/orange_circle"
         android:layout_centerInParent="true"
         android:elevation="5dp"
-        android:textSize="100dp"
-        android:textColor="@color/primaryTextColor"
+        android:textSize="100sp"
+        android:textColor="#fff"
         android:gravity="center"
         android:text="500"
         />
