--- a/app/src/main/res/layout/rating_frag2.xml
+++ b/app/src/main/res/layout/rating_frag2.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="10dp"
         android:text="Cfare mendoni per kete lokal"
         android:textColor="@color/primaryTextColor"
-        android:textSize="17dp"
+        android:textSize="17sp"
         />
 
     <EditText
@@ -20,8 +20,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="12dp"
+        android:gravity="center"
+        android:inputType="textCapSentences"
+        android:textColor="@color/secondaryTextColor"
+        android:textSize="17sp"
+
         />
 
 </LinearLayout>
