--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -22,7 +22,7 @@
 
 
         <LinearLayout
-            android:id="@+id/SliderDots"
+            android:id="@+id/rating_sliderdots"
             android:orientation="horizontal"
             android:gravity="center_vertical|center_horizontal"
             android:layout_width="match_parent"
