--- a/app/src/main/res/layout/bar_item.xml
+++ b/app/src/main/res/layout/bar_item.xml
@@ -16,6 +16,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -24,18 +28,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="fitXY"
-                app:srcCompat="@drawable/placeholderad" />
+                app:srcCompat="@drawable/barplaceholder1" />
 
-            <TextView
-                android:id="@+id/bar_name"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="24dp"
-                android:text="Grand Bocca"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="24sp" />
+                android:layout_height="50dp"
+                android:layout_gravity="bottom"
+                >
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorPrimaryDark"
+                    android:alpha="0.7"/>
+
+                <TextView
+                    android:id="@+id/bar_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="16dp"
+                    android:text="Grand Bocca"
+                    android:textStyle="bold"
+                    android:textColor="#fff"
+                    android:textSize="24sp" />
+            </FrameLayout>
+        </FrameLayout>
 
             <RatingBar
                 android:id="@+id/bar_rating"
@@ -44,19 +62,20 @@
                 android:layout_height="wrap_content"
                 android:isIndicator="true"
                 android:layout_gravity="left"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="16dp"
                 />
 
-            <TextView
-                android:id="@+id/bar_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp"
-                android:text="Perballe shkolles Harry Fultz"
-                android:textColor="@color/secondaryTextColor"
-                android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/bar_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="Perballe shkolles Harry Fultz"
+                    android:textColor="@color/secondaryTextColor"
+                    android:textSize="14sp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </FrameLayout>
