--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -20,6 +20,19 @@
         android:background="@color/colorPrimaryLight"
         >
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Publiko"
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="5dp"
+            android:textSize="19sp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:id="@+id/rating_publiko"
+            />
+
 
         <LinearLayout
             android:id="@+id/rating_sliderdots"
