--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -108,7 +108,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="27sp"
-                        android:text="Vleresime"
+                        android:text="Feedback"
                         android:textColor="#fff"
                         android:layout_centerVertical="true"
                         android:layout_toEndOf="@+id/imageView3"
