--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -18,40 +18,44 @@
         android:layout_height="0dp"
         android:layout_weight="30"
         android:background="@color/colorPrimaryLight"
+        android:orientation="vertical"
         >
+            <android.support.v4.view.ViewPager
+                android:id="@+id/rating_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+            </android.support.v4.view.ViewPager>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Publiko"
-            android:layout_gravity="bottom|right"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="5dp"
-            android:textSize="19sp"
-            android:textStyle="bold"
-            android:clickable="true"
-            android:id="@+id/rating_publiko"
-            />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_gravity="bottom"
+                >
 
+                <LinearLayout
+                    android:id="@+id/rating_sliderdots"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:gravity="center_vertical"
+                    />
 
-        <LinearLayout
-            android:id="@+id/rating_sliderdots"
-            android:orientation="horizontal"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="5dp"
-            ></LinearLayout>
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/rating_viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="1"
-            android:layout_marginBottom="10dp">
-        </android.support.v4.view.ViewPager>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Publiko"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="16dp"
+                    android:textSize="19sp"
+                    android:clickable="true"
+                    android:textColor="@color/primaryTextColor"
+                    android:id="@+id/rating_publiko"
+                    />
+            </RelativeLayout>
     </FrameLayout>
 
     <RelativeLayout
