--- a/app/src/main/res/layout/bar_item.xml
+++ b/app/src/main/res/layout/bar_item.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+
         app:cardCornerRadius="2dp"
         app:cardElevation="2dp"
         >
